# H2

./: Makefile  TODO.md  a-perspective-on-higher-haskell.markdown  automatic-differentiation-worked-examples.md.leftovers  extended-set-theory.markdown  fold.hs  h2.cabal  index.html  main.py  model-view-false-dichotomy.markdown  peter-principle.markdown  polymorphism.markdown  prefer-composition-to-application.markdown  site.hs  strict-haskell.markdown  test21.hs
code/: IOScopedRef.hs  IOScopedRefWithIORef.hs  dlist.hs  extensible-effects.hs  fold.hs  harder-reader.hs  hascallstack-domain-1.hs  hascallstack-domain-2.hs  hascallstack-domain-3.hs  hascallstack-domain-4.hs  leak-handle.hs  logger.hs  prompt-release.hs
css/: combined.css
posts/: a-perspective-on-higher-haskell.markdown  accidentally-exponential.md  ai-doom-posterity.md  alternatives-convert-products-to-sums.markdown  api-design.markdown  applicatives-without-applicative.markdown  articles-forthcoming.md  attribute-grammar.markdown  automatic-differentiation-worked-examples-maths.md  automatic-differentiation-worked-examples.md  backups.markdown  behaviour-changes-flag-day.md  bells-theorem-made-simpler.md  bluefin-all.md  bluefin-plucking-constraints.md  bluefin-prevents-handles-leaking.md  bluefin-streams-finalize-promptly.md  bluefin-versus-oop.md  bret-victor-talks.md  brooks-on-types.md  code-review.md  comments.markdown  complaining-about-languages.markdown  configuring-firefox.markdown  dante-for-dummies.markdown  data-map-strict-map-not-strict-map.md  data-structures-matter.markdown  dsl.markdown  (+129 more)
(+5 files in other folders)
