name:                h2
version:             0.0.0.0

build-type:          Simple
cabal-version:       >=1.10

executable site
  main-is:             site.hs
  hs-source-dirs:      .
  build-depends:       base,
                       hakyll == 4.13.4.0,
                       filepath == 1.4.2.1
  default-language:    Haskell2010
